# my-portfolio-streamlit

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  app.py  bio.txt  cloud-init-docker.yaml  constant.py  deploy-and-check.sh  deploy-to-ecr.sh  example.json  pyproject.toml  requirements.txt
components/: chatbot.py  contact.py  info.py  skills.py  work_experience.py
pages/: 1_Work_Experience.py  2_Technical_Skills.py  3_Resume.py  4_Hobbies.py  5_Contact_Me.py
style/: style.css
utils/: general_utils.py
