[project]
name = "my-portfolio-streamlit"
version = "0.1.0"
description = "My Personal Wesbite"
authors = [
    {name = "Manav Garkel"},
    {email= "manav.garkel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0.0"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "streamlit-lottie (>=0.0.5,<0.0.6)",
    "llama-index (>=0.12.28,<0.13.0)",
    "llama-cpp-python (>=0.3.8,<0.4.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "streamlit-vis-timeline (>=0.3.0,<0.4.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"  # or whatever your Python version is
fix = true  # Enable autofix
exclude = [
  "pyproject.toml",
  "data/",
  "build/",
  ".venv/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]  # Example: ignore long lines if you want

[tool.ruff.format]
quote-style = "double"  # or "single"
indent-style = "space"
docstring-code-format = true


